--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Samauel kufre willie",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-jest": "^29.6.2",
     "jest": "^29.6.2"
   }
 }
