--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   },
   "author": "Samauel kufre willie",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2"
+  },
+  "dependencies": {
+    "jsdom": "^22.1.0"
   }
 }
